--- a/hex.html
+++ b/hex.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Color</title>
-    <link rel="stylesheet" href="/stylos/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         </div>
     </main>
 
-    <script src="/js/hex.js"></script>
+    <script src="./js/hex.js"></script>
 </body>
 
 </html>
